syntax = "proto3";

package metrics;

option cc_generic_services = false;

service MetricsService {
    rpc ListEvents(ListEventsRequest) returns (ListEventsResponse);
}

message ListEventsRequest {
    string from_timestamp = 1;  // ISO 8601 format
    string to_timestamp = 2;    // ISO 8601 format
}

message ListEventsResponse {
    repeated RawEvent events = 1;
}

message RawEvent {
    string project_id = 1;
    string page = 2;
    string event_type = 3;
    double performance_ms = 4;
    bool is_error = 5;
    string user_id = 6;
    string session_id = 7;
    string timestamp = 8;  // ISO 8601 format
}
